// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarLeft/> renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="d-none d-lg-flex flex-column navbar-dark bg-primary navbar navbar-expand navbar-light"
    id="navbar-left"
    role="navigation"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      <div
        class="photo-card card"
      >
        <div
          class="d-none d-lg-block card-body"
        >
          <h5
            class="text-center card-title"
          >
            Arnaud Deprez
          </h5>
          <h6
            class="font-italic text-center text-wrap card-subtitle"
          >
            Technical Architect
          </h6>
        </div>
      </div>
    </a>
    <ul
      class="social-icons mb-3 navbar-nav"
      role=""
    >
      <li
        class="nav-item"
      >
        <a
          aria-label="Rss"
          class="nav-link"
          href="/rss.xml"
          rel="noopener noreferrer"
          target="_blank"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`<NavbarLeft/> renders correctly with children 1`] = `
<DocumentFragment>
  <nav
    class="d-none d-lg-flex flex-column navbar-dark bg-primary navbar navbar-expand navbar-light"
    id="navbar-left"
    role="navigation"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      <div
        class="photo-card card"
      >
        <div
          class="d-none d-lg-block card-body"
        >
          <h5
            class="text-center card-title"
          >
            Arnaud Deprez
          </h5>
          <h6
            class="font-italic text-center text-wrap card-subtitle"
          >
            Technical Architect
          </h6>
        </div>
      </div>
    </a>
    <ul
      class="social-icons mb-3 navbar-nav"
      role=""
    >
      <li
        class="nav-item"
      >
        <a
          aria-label="Rss"
          class="nav-link"
          href="/rss.xml"
          rel="noopener noreferrer"
          target="_blank"
        />
      </li>
    </ul>
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
          role="button"
        >
          Menu 1
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
          role="button"
        >
          Menu 2
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="#"
          role="button"
        >
          Menu 3
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
